--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,6 +1,6 @@
 @import '../../../public/libs/css/normalize-scss/_normalize';
 body {
-  font: 26px 'Gill Sans', Arial, sans-serif;
+  font: 26px Helvetica, Arial, sans-serif;
 }
 
 a {
